--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- ### Main Content Start ###-->
     <div class="main-content">
       <!-- ### Home Section Start ###-->
-      <section class="home section hidden">
+      <section class="home section ">
         <div class="container">
           <div class="row">
             <div class="home-info padd-15">
@@ -43,7 +43,7 @@
               <p>front end developer with experience building responsive web design in the financial industry.
                 Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many more
                 ...</p>
-                <a href="#contact" class="btn hire-me">Hire me</a>
+              <a href="#contact" class="btn hire-me">Hire me</a>
             </div>
             <div class="home-img padd-15">
               <img src="Imgs/3.jpg" alt="">
@@ -66,7 +66,8 @@
                 <div class="about-text padd-15">
                   <h3>I'm Alaa Eldin <span>Wep Devolper</span></h3>
                   <p>front end developer with experience building responsive web design in the financial industry.
-                    Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many more
+                    Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many
+                    more
                     ...</p>
                 </div>
               </div>
@@ -92,8 +93,122 @@
                       <p>Freelance : <span>Available</span></p>
                     </div>
                   </div>
+                  <div class="row">
+                    <div class="buttons padd-15">
+                      <a href="#" class="btn">Download CV</a>
+                      <a href="#contact" class="btn hire-me">Hire me</a>
+                    </div>
+                  </div>
                 </div>
-                <div class="skill  padd-15">Skills</div>
+                <div class="skill  padd-15">
+                  <div class="row">
+                    <div class="skill-item padd-15">
+                      <h5>HTML</h5>
+                      <div class="progress">
+                        <div class="progress-in" style="width: 76%;"></div>
+                        <div class="skill-precent">76%</div>
+                      </div>
+                    </div>
+                    <div class="skill-item padd-15">
+                      <h5>CSS</h5>
+                      <div class="progress">
+                        <div class="progress-in" style="width: 86%;"></div>
+                        <div class="skill-precent">86%</div>
+                      </div>
+                    </div>
+                    <div class="skill-item padd-15">
+                      <h5>JaveScript</h5>
+                      <div class="progress">
+                        <div class="progress-in" style="width: 73%;"></div>
+                        <div class="skill-precent">73%</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="education padd-15">
+                  <h3 class="title ">Education</h3>
+                  <div class="row">
+                    <div class="timeline-box padd-15">
+                      <div class="timeline shadow-dark">
+                        <!-- Timeline Item Start -->
+                        <div class="timeline-item">
+                          <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"></i> 2013-2015
+                          </h3>
+                          <h4 class="timeline-title">Master In Computer</h4>
+                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            temporibus quis dicta necessitatibus ullam ipsa quibusdam natus at quo recusandae vitae
+                            voluptas officiis, dolorem cum modi. Aspernatur modi soluta quis!</p>
+                        </div>
+                        <div class="timeline-item">
+                          <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"></i> 2013-2015
+                          </h3>
+                          <h4 class="timeline-title">Master In Computer</h4>
+                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            temporibus quis dicta necessitatibus ullam ipsa quibusdam natus at quo recusandae vitae
+                            voluptas officiis, dolorem cum modi. Aspernatur modi soluta quis!</p>
+                        </div>
+                        <div class="timeline-item">
+                          <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"></i> 2013-2015
+                          </h3>
+                          <h4 class="timeline-title">Master In Computer</h4>
+                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            temporibus quis dicta necessitatibus ullam ipsa quibusdam natus at quo recusandae vitae
+                            voluptas officiis, dolorem cum modi. Aspernatur modi soluta quis!</p>
+                        </div>
+                        <!-- Timeline Item End -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="education padd-15">
+                  <h3 class="title">Experience</h3>
+                  <div class="row">
+                    <div class="timeline-box padd-15">
+                      <div class="timeline shadow-dark">
+                        <!-- Timeline Item Start -->
+                        <div class="timeline-item">
+                          <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"></i> 2013-2015
+                          </h3>
+                          <h4 class="timeline-title">Master In Computer</h4>
+                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            temporibus quis dicta necessitatibus ullam ipsa quibusdam natus at quo recusandae vitae
+                            voluptas officiis, dolorem cum modi. Aspernatur modi soluta quis!</p>
+                        </div>
+                        <div class="timeline-item">
+                          <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"></i> 2013-2015
+                          </h3>
+                          <h4 class="timeline-title">Master In Computer</h4>
+                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            temporibus quis dicta necessitatibus ullam ipsa quibusdam natus at quo recusandae vitae
+                            voluptas officiis, dolorem cum modi. Aspernatur modi soluta quis!</p>
+                        </div>
+                        <div class="timeline-item">
+                          <div class="circle-dot"></div>
+                          <h3 class="timeline-date">
+                            <i class="fa fa-calendar"></i> 2013-2015
+                          </h3>
+                          <h4 class="timeline-title">Master In Computer</h4>
+                          <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+                            temporibus quis dicta necessitatibus ullam ipsa quibusdam natus at quo recusandae vitae
+                            voluptas officiis, dolorem cum modi. Aspernatur modi soluta quis!</p>
+                        </div>
+                        <!-- Timeline Item End -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
