--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- ### Main Content Start ###-->
     <div class="main-content">
       <!-- ### Home Section Start ###-->
-      <section class="home section ">
+      <section class="home section hidden">
         <div class="container">
           <div class="row">
             <div class="home-info padd-15">
@@ -53,7 +53,7 @@
       </section>
       <!-- ### Home Section End ###-->
       <!-- ### About Start ###-->
-      <section class="about section">
+      <section class="about section hidden">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -215,6 +215,218 @@
         </div>
       </section>
       <!-- ### About End ###-->
+      <!-- ### Services Section Start ###-->
+      <section class="service section hidden">
+        <div class="container">
+          <div class="row">
+            <div class="section-title padd-15">
+              <h2>Services</h2>
+            </div>
+          </div>
+          <div class="row">
+            <!-- Services Item Start -->
+            <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-mobile-alt"></i>
+                </div>
+                <h4>Web Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa doloremque .
+                </p>
+              </div>
+            </div>
+            <!-- Services Item End -->
+            <!-- Services Item Start -->
+            <div class="service-item padd-15 ">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-laptop-code"></i>
+                </div>
+                <h4>Web Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa doloremque .
+                </p>
+              </div>
+            </div>
+            <!-- Services Item End -->
+            <!-- Services Item Start -->
+            <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-palette"></i>
+                </div>
+                <h4>Web Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa doloremque .
+                </p>
+              </div>
+            </div>
+            <!-- Services Item End -->
+            <!-- Services Item Start -->
+            <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-code"></i>
+                </div>
+                <h4>Web Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa doloremque .
+                </p>
+              </div>
+            </div>
+            <!-- Services Item End -->
+            <!-- Services Item Start -->
+            <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-search"></i>
+                </div>
+                <h4>Web Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa doloremque .
+                </p>
+              </div>
+            </div>
+            <!-- Services Item End -->
+            <!-- Services Item Start -->
+            <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-bullhorn"></i>
+                </div>
+                <h4>Web Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa doloremque .
+                </p>
+              </div>
+            </div>
+            <!-- Services Item End -->
+          </div>
+        </div>
+      </section>
+      <!-- ### Services Section End ###-->
+      <!-- ### Portfolio Section Start ###-->
+      <section class="portfolio section hidden">
+        <div class="container">
+          <div class="row">
+            <div class="section-title padd-15">
+              <h2>Portfolio</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="portfolio-heading padd-15">
+              <h2>My Last Project :</h2>
+            </div>
+          </div>
+          <div class="row">
+            <!-- Portfolio Item Start -->
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="Imgs/p1.jpg" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="Imgs/p2.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="Imgs/p3.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="Imgs/p4.jpg" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="Imgs/p5.webp" alt="">
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio Item End -->
+
+          </div>
+        </div>
+      </section>
+      <!-- ### Portfolio Section End ###-->
+      <!-- ### Contact Section Start ###-->
+      <section class="contact section">
+        <div class="container">
+          <div class="row">
+            <div class="section-title padd-15">
+              <h2>Contact Me</h2>
+            </div>
+          </div>
+          <h3 class="contact-title">Have any Questions ?</h3>
+          <h4 class="contact-sub-title">I'M AT YOUR SERVICES</h4>
+          <div class="row">
+            <!-- Contact Item Start -->
+            <div class="contact-info-item padd-15">
+              <div class="icon"><i class="fa fa-phone"></i></div>
+              <h4>Call Us On</h4>
+              <p>+2 0100 270 5 300</p>
+            </div>
+            <div class="contact-info-item padd-15">
+              <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+              <h4>Office</h4>
+              <p>EGYPT</p>
+            </div>
+            <div class="contact-info-item padd-15">
+              <div class="icon"><i class="fa fa-envelope"></i></div>
+              <h4>Email</h4>
+              <p>xoxmadoxox76@gmail.com</p>
+            </div>
+            <!-- Contact Item End -->
+          </div>
+          <h3 class="contact-title padd-15">SEND ME AN Email</h3>
+          <h4 class="contact-sub-title padd-15">I'M VERRY RESPONSIVE TO MESSAGES</h4>
+          <!-- Contact Form -->
+          <div class="row">
+            <div class="contact-form padd-15">
+              <div class="row">
+                <div class="form-item col-6 padd-15">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Name">
+                  </div>
+                </div>
+                <div class="form-item col-6 padd-15">
+                  <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Email">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-item col-12 padd-15">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Subject">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-item col-12 padd-15">
+                  <div class="form-group">
+                    <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-item col-12 padd-15">
+                  <button type="submit" class="btn">Send Message</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ### Contact Section End ###-->
+
     </div>
     <!-- ### Main Content End ###-->
   </div>
