--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- ### Main Content Start ###-->
     <div class="main-content">
       <!-- ### Home Section Start ###-->
-      <section class="home section hidden">
+      <section class="home section ">
         <div class="container">
           <div class="row">
             <div class="home-info padd-15">
@@ -53,7 +53,7 @@
       </section>
       <!-- ### Home Section End ###-->
       <!-- ### About Start ###-->
-      <section class="about section hidden">
+      <section class="about section ">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -217,7 +217,7 @@
       </section>
       <!-- ### About End ###-->
       <!-- ### Services Section Start ###-->
-      <section class="service section hidden">
+      <section class="service section ">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -302,7 +302,7 @@
       </section>
       <!-- ### Services Section End ###-->
       <!-- ### Portfolio Section Start ###-->
-      <section class="portfolio section hidden">
+      <section class="portfolio section ">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
