--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <div class="main-content">
       <!-- ### Home Section Start ###-->
       <section class="home section " id="home">
-        <div class="container" >
+        <div class="container">
           <div class="row">
             <div class="home-info padd-15">
               <h3 class="hello">Hello, My name is <span class"name">Alaa Eldin</span></h3>
-              <h3 class="my-profession">T' m a <span id="typing"></span></h3>
+              <h3 class="my-profession">I' m a <span id="typing"></span></h3>
               <p>front end developer with experience building responsive web design in the financial industry.
                 Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many more
                 ...</p>
@@ -72,7 +72,7 @@
             <div class="about-content padd-15">
               <div class="row">
                 <div class="about-text padd-15">
-                  <h3>I'm Alaa Eldin <span >(Front-end) Web Developer</span></h3>
+                  <h3>I'm Alaa Eldin <span>(Front-end) Web Developer</span></h3>
                   <p>front end developer with experience building responsive web design in the financial industry.
                     Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many
                     more
