--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <p>front end developer with experience building responsive web design in the financial industry.
                 Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many more
                 ...</p>
-              <a href="#contact" class="btn hire-me">Hire me</a>
+              <a href="#" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
               <img src="Imgs/3.jpg" alt="">
@@ -103,8 +103,7 @@
                   </div>
                   <div class="row">
                     <div class="buttons padd-15">
-                      <a href="#" class="btn">Download CV</a>
-                      <a href="#contact" class="btn hire-me">Hire me</a>
+                      <a href="#contact" data-section-index="1" class="btn hire-me">Hire me</a>
                     </div>
                   </div>
                 </div>
