--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body class="dark">
   <!-- ### Main Container Start ###-->
   <div class="main-container">
     <!-- ### Aside Start ###-->
@@ -54,7 +54,7 @@
               <a href="#" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
-              <img src="Imgs/3.jpg" alt="">
+              <img src="Imgs/1111.png" alt="">
             </div>
           </div>
         </div>
