--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- ### Main Container Start ###-->
   <div class="main-container">
     <!-- ### Aside Start ###-->
-    <div class="aside">
+    <div class="aside" id="aside">
       <div class="logo">
         <a href="#"><span>A</span>tals</a>
       </div>
