--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
   <!-- ### Main Container Start ###-->
   <div class="main-container">
     <!-- ### Aside Start ###-->
+    <div class="nav-toggle">
+      <!-- <span></span> -->
+      <ul class="nav-too">
+        <li class="hovered"><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+        <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+        <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+        <li><a href="#contact"><i class="fa fa-comment"></i>Contact</a></li>
+      </ul>
+    </div>
     <div class="aside" id="aside">
       <div class="logo">
         <a href="#"><span>A</span>tals</a>
-      </div>
-      <div class="nav-toggle">
-        <span></span>
       </div>
       <ul class="nav">
         <li class="hovered"><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
