--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- ### Aside Start ###-->
     <div class="nav-toggle">
       <!-- <span></span> -->
+      <div class="logo">
+        <a href="#"><span>Alaa</span>Eldin</a>
+      </div>
       <ul class="nav-too">
         <li class="hovered"><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
         <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
@@ -35,7 +38,7 @@
     </div>
     <div class="aside" id="aside">
       <div class="logo">
-        <a href="#"><span>A</span>tals</a>
+        <a href="#"><span>Alaa</span>Eldin</a>
       </div>
       <ul class="nav">
         <li class="hovered"><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
@@ -55,9 +58,9 @@
             <div class="home-info padd-15">
               <h3 class="hello">Hello, My name is <span class"name">Alaa Eldin</span></h3>
               <h3 class="my-profession">I' m a <span id="typing"></span></h3>
-              <p>front end developer with experience building responsive web design in the financial industry.
+              <!-- <p>front end developer with experience building responsive web design in the financial industry.
                 Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many more
-                ...</p>
+                ...</p> -->
               <a href="#" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
