--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="nav-toggle">
       <!-- <span></span> -->
       <div class="logo">
-        <a href="#"><span>Alaa</span>Eldin</a>
+        <a href="#home"><span>Alaa</span>Eldin</a>
       </div>
       <ul class="nav-too">
         <li class="hovered"><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
@@ -38,7 +38,7 @@
     </div>
     <div class="aside" id="aside">
       <div class="logo">
-        <a href="#"><span>Alaa</span>Eldin</a>
+        <a href="#home"><span>Alaa</span>Eldin</a>
       </div>
       <ul class="nav">
         <li class="hovered"><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
