--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="container">
           <div class="row">
             <div class="home-info padd-15">
-              <h3 class="hello">Hello, My name is <span class"name">Alaa Eldin</span></h3>
+              <h3 class="hello">Hello, My name is <span class="name">Alaa Eldin</span></h3>
               <h3 class="my-profession">I' m a <span id="typing"></span></h3>
               <!-- <p>front end developer with experience building responsive web design in the financial industry.
                 Proficient with CSS and JS Frameworks, with extensive knowledge of UX and user psychology, and many more
                 ...</p> -->
-              <a href="#" class="btn">Download CV</a>
+              <a href="https://www.mediafire.com/file/5xgottsdmru46do/Alaa-CV.pdf/file" class="btn">Download CV</a>
             </div>
             <div class="home-img padd-15">
               <img src="Imgs/1111.png" alt="">
